# whisperer

./: Cargo.toml  README.md
package/: install.sh  uninstall.sh  whisperer.desktop
src/: comms.rs  info.txt  main.rs  msg.rs  save.rs  tcp.rs  vector.rs
src/gui/: interactive.rs  mod.rs
src/kem/: matrix.rs  mod.rs
src/sem/: mod.rs
src/tcp/: mod.rs  tests.rs
